# Dbus_For_p2p

./: NetworkManager_p2p.py  busctl_p2p.md  nmcli.1.36.man  p2p_discovery.py  pipeline.md  reademe.md  readme.md
cpp/: CMakeLists.txt  readme.md
cpp/src/: dbus_helpers.cpp  dbus_helpers.h  main.cpp  p2p_connection.cpp  p2p_connection.h  p2p_discovery.cpp  p2p_discovery.h
docs/: busctl.man  networkManager_dbus.md  succeed_network.md  wpa_supplicant_dbus_api.md
reference/: p2p_discovery.py
